--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,18 @@ code {
 .todo-container {
   width: 35rem;
 }
+
+#add-todo-btn {
+  bottom: 2rem;
+  right: 2rem;
+  position: fixed;
+  border-radius: 100%;
+}
+
+.delete-todo-btn {
+  color: rgb(156, 156, 156);
+}
+
+.delete-todo-btn:hover {
+  color: red;
+}
